--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# PyCharm
+.idea/
+
+# secrets
+api_secrets.py
+
+# scratch code
+*_scratch.py
+*_scratch.ipynb
